--- a/optimalRoute.html
+++ b/optimalRoute.html
@@ -286,6 +286,7 @@
                                     width: 2
                             }
                         };
+                        polygonGraphicsLayer.removeAll();
                         view.graphics.add(lastStop);
                         view.goTo(result.route);
                         const stat =
